--- a/website/hydra.html
+++ b/website/hydra.html
@@ -20,16 +20,16 @@
 		<div class="masthead">
 	        <div class="masthead">
 			  <div class="button">
-			  	<img class="img-rounded" src="hydra.png" height="10" width="150" /> 
+			  	<img class="img-rounded" src="hydra.png" height="10" width="150"/> 
 			  </div>
 	        </div>			
 		</div>
 		<hr/>
 		<div id="content">
 		<div class="row">
-			<div class="span8">
+			<div class="span6">
 				<div class="row-fluid">
-					<div class="span8">
+					<div class="span12">
 						<h1>De mobiele app voor UGent studenten</h1>
 						<p class="lead">
 							Gebruik Hydra om op de hoogte te blijven van het laatste nieuws en de activiteiten van jouw favoriete studentenverenigingen.<br>
@@ -39,23 +39,28 @@
 					</div>
 				</div>
 				<div class="row-fluid">
-					<div class="offset2 span4">
+					<div class="span1">
 						<a href="https://itunes.apple.com/be/app/hydra/id602640924" id="app-store"></a>
 					</div>
 				</div>
 				<div class="row-fluid">
-					<div class="offset2 span1">
+					<div class="span1">
 						<a href="http://play.google.com/store/apps/details?id=be.ugent.zeus.hydra" id="play-store"></a>
 					</div>
 				</div>
+				<!--
 				<div class="row-fluid">
 					<div class="offset2 span1">
 	        			<div href="" id="wp-store"></div>
 					</div>
 				</div>
+				-->
 					<hr/>
 				<div class="row-fluid">
-					<div class="span4">
+					<h3>Hydra houdt je op de hoogte over:</h3>
+				</div>	
+				<div class="row-fluid">
+					<div class="span6">
 	          		  <h4>Nieuws</h4>
 	          		  <p>Weet wat er gebeurt in en om de UGent en jouw studentenvereniging.</p>
 					  
@@ -66,7 +71,7 @@
 		         	 	<p>Verdwaald in Gent en plotseling hongerig? Dankzij de kaart weet je altijd waar de dichtstbijzijnde resto is en wat er op het menu staat.</p>
 					  
 				  </div>
-	        	<div class="span4">
+	        	<div class="span6">
 					<h4>Activiteit</h4>
 					<p>Niets te doen vanavond? In de activiteitenlijst vind je vast wel iets naar je goesting. 
 				  		Ook weet je dankzij Facebook direct waar je jouw vrienden kunt tegenkomen / vinden / jouw vrienden aanwezig zullen zijn.
@@ -80,28 +85,24 @@
 	        	</div>
 			</div>
 		</div>
-		<div class="span4 carousel slide" id="iphone">
-			<!-- ><ol class="carousel-indicators">
-				<li data-target="#iphone" data-slide-to="0" class="active"></li>
-				<li data-target="#iphone" data-slide-to="1"></li>
-				<li data-target="#iphone" data-slide-to="2"></li>
-			</ol> -->
-			
+		<div class="offset1 span5 carousel slide hidden-phone" id="iphone">
 			<div class="carousel-inner">
 				<div class="active item">
-					<img src="http://placehold.it/570x800">
+					<img src="img/ios-1.png">
 				</div>
 				<div class="item">
-					<img src="http://placehold.it/570x800">
+					<img src="img/ios-2.png">
 				</div>
 				<div class="item">
-					<img src="http://placehold.it/570x800">		
+					<img src="img/ios-3.png">
+				</div>
+				<div class="item">
+					<img src="img/ios-4.png">
+				</div>
+				<div class="item">
+					<img src="img/ios-5.png">
 				</div>
 			</div>	
-			<!--	
-			<a class="carousel-control left" href="#iphone" data-slide="prev">&lsaquo;</a>
-			<a class="carousel-control right" href="#iphone" data-slide="next">&rsaquo;</a>
-			-->
 		</div>
 	</div>
 </div>
