added IE <= 8 support for app store logo

--- a/website/hydra.html
+++ b/website/hydra.html
@@ -14,6 +14,20 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
+	
+	<!-- [if lte IE 8]>
+	<style>
+    #app-store {
+        display: block;
+  	  	background-image:  url("../img/app-store.png");
+        width: 172px;
+        height: 50px;
+        margin-top: 10px;
+        background-size: 100%;
+  	  background-repeat: no-repeat;
+    }
+	</style>
+	<![endif]-->
   </head>
   <body>
 	<div class="container">
