Added some changes advised by Robust2

--- a/website/hydra.html
+++ b/website/hydra.html
@@ -65,7 +65,7 @@
 					  <h4>Urgent.fm</h4>
 					  <p>Live-streaming radio van Urgent.fm: je favoriete radio altijd bij de hand.</p>
 		         	
-					<h4>Activiteit</h4>
+					<h4>Activiteiten</h4>
 					<p>Niets te doen vanavond? In de activiteitenlijst vind je vast wel iets naar je goesting. 
 				  		Ook weet je dankzij Facebook direct waar je jouw vrienden kunt tegenkomen / vinden / jouw vrienden aanwezig zullen zijn.
 			 	   </p>
