added smart banner support for mobile os'es

--- a/website/hydra.html
+++ b/website/hydra.html
@@ -2,19 +2,20 @@
 <html>
   <head>
     <title>Hydra mobile app for UGent students</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="apple-itunes-app" content="app-id=602640924">
+	<meta name="google-play-app" content="app-id=be.ugent.zeus.hydra">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 
     <link href="css/custom.css" rel="stylesheet" media="screen">
 	
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-	
+	<link rel="stylesheet" href="css/jquery.smartbanner.css" type="text/css" media="screen">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.smartbanner.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
-	
 	<!-- [if lte IE 8]>
 	<style>
     #app-store {
@@ -26,7 +27,7 @@
   <body>
 	<div class="container">
 		<div class="masthead">
-			<ul class="nav nav-pills pull-right">
+			<ul class="nav nav-pills pull-right hidden-phone">
 				<li><a href="https://itunes.apple.com/be/app/hydra/id602640924" id="app-store"></a></li>
 				<li><a href="http://play.google.com/store/apps/details?id=be.ugent.zeus.hydra" id="play-store"></a></li>
 			<!-- <li><a href="" id="wp-store"></a></li> -->
