Fix some typos, use lighter background-image

--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+    <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
     <title>Hydra, mobiele app voor studenten aan de UGent</title>
     <meta name="apple-itunes-app" content="app-id=602640924">
     <meta name="google-play-app" content="app-id=be.ugent.zeus.hydra">
@@ -67,8 +68,8 @@
                         <p>Live-streaming radio van Urgent.fm: je favoriete radio altijd bij de hand.</p>
                     </div>
                 </div>
-                <h4>Opensource</h4>
-                <p>Hydra werd ontwikkeld door Zeus WPI, de werkgroep informatica van de UGent. Wij geloven in open-source em maken deze app dan ook publiek op <a href="https://github.com/ZeusWPI/Hydra">GitHub</a>. Bijdrages zijn meer dan welkom!</p>
+                <h4>Open-source</h4>
+                <p>Hydra werd ontwikkeld door Zeus WPI, de werkgroep informatica van de UGent. Wij geloven in open-source en maken deze app dan ook publiek op <a href="https://github.com/ZeusWPI/Hydra">GitHub</a>. Bijdrages zijn meer dan welkom!</p>
             </div>
         </div>
         <div class="span6">
