--- a/scraper/info/info-kalender.html
+++ b/scraper/info/info-kalender.html
@@ -26,22 +26,22 @@
             <div onclick="toggleDiv('1sem');" class="title-background">
                 <div id="1sem" class="left">
                     <h3>Eerste semester</h3>
-                    <p>21 september tot 19 december 2015</p>
+                    <p>26 september tot 24 december 2016</p>
                 </div>
                 <div id="1sem-arrow" class="arrow arrow-right"></div>
             </div>
             <div id="1sem-det" class="det hidden">
                 <ul class="detailed">
-                    <li>di 18 sep 2015: plechtige opening</li>
-                    <li>ma 21 sep 2015: start academiejaar</li>
-                    <li>ma 21 september t.e.m. za 12 december 2016:<br />
+                    <li>ma 26 sep 2016: start academiejaar</li>
+                    <li>ma 26 september t.e.m. za 17 december 2016:<br />
                         <span class="indent">12 weken onderwijsactiviteiten eerste semester</span>
                     </li>
-                    <li class="gesloten">zo 1 nov 2015: Allerheiligen (gesloten)</li>
-                    <li class="gesloten">ma 2 nov 2015: Allerzielen (gesloten)</li>
-                    <li class="gesloten">wo 11 nov 2015: Wapenstilstand (gesloten)</li>
-                    <li class="gesloten">zo 15 nov 2015: Koningsdag (gesloten)</li>
-                    <li>ma 14 dec t.e.m. za 19 dec 2015:<br />
+                    <li class="gesloten">ma 31 okt 2016: Allerheiligen (gesloten)</li>
+                    <li class="gesloten">di 1 nov 2016: Allerheiligen (gesloten)</li>
+                    <li class="gesloten">wo 2 nov 2016: Allerzielen (gesloten)</li>
+                    <li class="gesloten">vr 11 nov 2016: Wapenstilstand (gesloten)</li>
+                    <li class="gesloten">di 15 nov 2016: Koningsdag (gesloten)</li>
+                    <li>ma 19 dec t.e.m. za 24 dec 2016:<br />
                         <span class="indent">1 week inhaalactiviteiten</span>
                     </li>
                 </ul>
@@ -52,7 +52,7 @@
             <div class="title-background">
                 <div class="left">
                     <h3>Kerstreces</h3>
-                    <p>21 december 2015 tot 2 jan 2016</p>
+                    <p>26 december 2016 tot 7 jan 2017</p>
                 </div>
             </div>
         </div>
@@ -61,7 +61,7 @@
             <div class="title-background">
                 <div class="left">
                     <h3>Eerste examenperiode</h3>
-                    <p>4 januari tot 30 januari 2016</p>
+                    <p>9 januari tot 4 februari 2017</p>
                 </div>
               </div>
         </div>
@@ -70,7 +70,7 @@
             <div class="title-background">
                 <div class="left">
                     <h3>Intersemestriële vakantie</h3>
-                    <p>1 februari t.e.m. 6 februari 2016</p>
+                    <p>6 februari t.e.m. 11 februari 2017</p>
                 </div>
             </div>
         </div>
@@ -79,30 +79,29 @@
             <div id="2sem" onclick="toggleDiv('2sem');" class="title-background">
                 <div class="left">
                     <h3>Tweede semester</h3>
-                    <p>8 februari tot 21 mei 2016</p>
+                    <p>13 februari tot 27 mei 2017</p>
                 </div>
                 <div id="2sem-arrow" class="arrow arrow-right"></div>
             </div>
             <div id="2sem-det" class="det hidden">
                 <ul class="detailed">
-                    <li>ma 8 februari t.e.m. za 26 maart 2016:<br />
+                    <li>ma 13 februari t.e.m. za 1 april 2017:<br />
                         <span class="indent">7 weken onderwijsactiviteiten 2e semester</span>
                     </li>
-                    <li class="gesloten">vr 18 maart 2016: Dies Natalis (gesloten)</li>
-                    <li>ma 28 maart t.e.m. za 9 april 2016:<br />
+                    <li class="gesloten">vr 24 maart 2017: Dies Natalis (gesloten)</li>
+                    <li>ma 3 april t.e.m. za 17 april 2017:<br />
                         <span class="indent">2 weken paasreces (gesloten)</span>
                     </li>
-                    <li class="gesloten">ma 28 maart 2016: Paasmaandag (gesloten)</li>
-                    <li>ma 28 april t.e.m. za 14 mei 2016:<br />
+                    <li class="gesloten">ma 17 april 2017: Paasmaandag (gesloten)</li>
+                    <li>ma 18 april t.e.m. za 20 mei 2017:<br />
                         <span class="indent">5 weken onderwijsactiviteiten 2e semester</span>
                     </li>
-                    <li class="gesloten">zo 1 mei 2016: Feest van de arbeid (gesloten)</li>
-                    <li class="gesloten">do 5 mei 2016: O.L.H. Hemelvaart (gesloten)</li>
-                    <li class="gesloten">vr 6 mei 2016: brugdag (gesloten)</li>
-                    <li>ma 16 mei t.e.m. za 21 mei 2016:<br />
+                    <li class="gesloten">ma 1 mei 2017: Feest van de arbeid (gesloten)</li>
+                    <li class="gesloten">vr 6 mei 2017: brugdag (gesloten)</li>
+                    <li>ma 22 mei t.e.m. za 27 mei 2017:<br />
                         <span class="indent">1 week inhaalactiviteiten</span>
                     </li>
-                    <li class="gesloten">ma 16 mei 2016: Pinkstermaandag (gesloten)</li>
+                    <li class="gesloten">do 25 mei 2017: O.L.H. Hemelvaart (gesloten)</li>
                 </ul>
             </div>
         </div>
@@ -111,8 +110,13 @@
             <div id="2exam" onclick="toggleDiv('2exam');" class="title-background">
                 <div class="left">
                     <h3>Tweede examenperiode</h3>
-                    <p>23 mei tot 2 juli 2016</p>
+                    <p>29 mei tot 8 juli 2017</p>
                 </div>
+            </div>
+            <div id="2sem-det" class="det hidden">
+                <ul class="detailed">
+                    <li class="gesloten">ma 5 juni 2017: Pinkstermaandag (gesloten)</li>
+                </ul>
             </div>
         </div>
 
@@ -120,18 +124,19 @@
             <div id="vak" onclick="toggleDiv('vak');" class="title-background">
                 <div class="left">
                     <h3>Zomervakantie</h3>
-                    <p>4 juli tot 13 augustus 2016</p>
+                    <p>10 juli tot 19 augustus 2017</p>
                 </div>
                 <div id="vak-arrow" class="arrow arrow-right"></div>
             </div>
             <div id="vak-det" class="det hidden">
                 <ul class="detailed">
-                    <li class="gesloten">za 11 juli 2016:<br />
+                    <li class="gesloten">di 11 juli 2017:<br />
                         <span class="indent">Feest Vlaamse gemeenschap (gesloten)</span>
                     </li>
-                    <li class="gesloten">ma 18 juli t.e.m. ma 22 juli 2016:<br />
+                    <li class="gesloten">ma 18 juli t.e.m. ma 22 juli 2017:<br />
                         <span class="indent">week Gentse feesten (gesloten)</span>
                     </li>
+                    <li class="gesloten">di 15 augustus 2017: O.L.V. Hemelvaart (gesloten)</li>
                 </ul>
             </div>
         </div>
@@ -140,23 +145,22 @@
             <div id="3exam" onclick="toggleDiv('3exam');" class="title-background">
                 <div class="left">
                     <h3>Derde examenperiode</h3>
-                    <p>16 augustus tot 17 september 2016</p>
+                    <p>21 augustus tot 23 september 2017</p>
                 </div>
                 <div id="3exam-arrow" class="arrow arrow-right"></div>
             </div>
             <div id="3exam-det" class="det hidden">
                 <ul class="detailed">
-                    <li>ma 15 september t.e.m. za 26 september 2016:<br />
+                    <li>ma 18 september t.e.m. za 23 september 2017:<br />
                         <span class="indent">feedback alle examenperiodes en heroriëntaties</span>
                     </li>
-                    <li class="gesloten">ma 15 augustus 2016: O.L.V. Hemelvaart (gesloten)</li>
                 </ul>
             </div>
         </div>
 
         <div class="title-background">
             <h3>Start volgend academiejaar</h3>
-            <p>ma 26 september 2016</p>
+            <p>ma 25 september 2017</p>
         </div>
     </body>
 </html>
