--- a/website/index.html
+++ b/website/index.html
@@ -57,6 +57,8 @@
             <div class="content-block">
                 <div class="row-fluid clearfix">
                     <div class="span6">
+                        <h4>Minerva</h4>
+                        <p>Heb uw lessenagenda altijd bij de hand, en mis nooit meer een aankondiging!</p>
                         <h4>Activiteiten</h4>
                         <p>Niets te doen vanavond? Op onze kalender vind je vast wel iets naar je goesting. Ook weet je dankzij Facebook direct op welke activiteiten je vrienden aanwezig zullen zijn.</p>
                         <h4>Nieuws</h4>
@@ -65,6 +67,8 @@
                         <p>Niet zeker op welke dagen de universiteit gesloten is of waar je je fiets kan herstellen? Hier vind je het antwoord op al je vragen.</p>
                     </div>
                     <div class="span6">
+                        <h4>Student Kick-Off</h4>
+                        <p>Weet waar en wanneer de bands optreden, vind meer informatie over uw favoriete standje in de Student Village!</p>
                         <h4>Resto menu</h4>
                         <p>Verdwaald in Gent en plots wat hongerig? Dankzij de kaart weet je altijd waar de dichtstbijzijnde resto is en wat er op het menu staat.</p>
                         <h4>Schamper Daily</h4>
@@ -79,16 +83,21 @@
         </div>
         <div class="span6">
             <div class="carousel-wrapper">
-                <div class="carousel">
+              <img src="img/iphone2-frame.png">
+                <!--<div class="carousel">
                     <ul class="slides">
-                        <li><img src="img/iphone-1.png"></li>
+                      <li><img src="img/iphone-1.png"></li>
+                      <li><img src="img/iphone-1.png"></li>
+                      <li><img src="img/iphone-1.png"></li>
+                      <li><img src="img/iphone-1.png"></li>
+                      <li><img src="img/iphone-1.png"></li>
                         <li><img src="img/iphone-2.png"></li>
                         <li><img src="img/iphone-3.png"></li>
                         <li><img src="img/iphone-4.png"></li>
                         <li><img src="img/iphone-5.png"></li>
                     </ul>
                 </div>
-                <div class="carousel-frame"></div>
+                <div class="carousel-frame"></div>-->
             </div>
         </div>
     </div>
