--- a/website/index.html
+++ b/website/index.html
@@ -79,6 +79,8 @@
                 </div>
                 <h4>Open-source</h4>
                 <p>Hydra werd ontwikkeld door Zeus WPI, de werkgroep informatica van de UGent. Wij geloven in open-source en maken deze app dan ook publiek op <a href="https://github.com/ZeusWPI/Hydra">GitHub</a>. Bijdrages zijn meer dan welkom!</p>
+                <h4>Social media</h4>
+                <p>Volg ons op <a href="https://facebook.com/hydra.ugent">Facebook</a></p>
             </div>
         </div>
         <div class="span6">
@@ -114,7 +116,7 @@
     }(document, 'script'));
 </script>
 <div id="footer" class="content-block">
-   <p>&copy; <a href="http://zeus.ugent.be">Zeus WPI</a> en <a href="http://student.ugent.be">Dienst StudentenActiviteiten</a> 2013</p>
+   <p>&copy; <a href="http://zeus.ugent.be">Zeus WPI</a> en <a href="http://student.ugent.be">Dienst StudentenActiviteiten</a> 2016</p>
    <p class="text-right">Foto &copy; <a href="https://www.facebook.com/Baselphoto">Basel Photography</a></p>
 </div>
 </body>
