Redirects in old HTML files (we do our part against link rot)

--- a/scraper/info/info-bloklocaties.html
+++ b/scraper/info/info-bloklocaties.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <!-- Styles -->
-        <link href="webview.css" rel="stylesheet" type="text/css" />
-        
-        <!-- Scripts -->
-        <script type="text/javascript">
-            window.location.href = "http://zeus.ugent.be/blok/";
-        </script>
-    </head>
-    
-    <body>
-        <div id="content">
-            <div id="wrapper">
-                Loading...
-            </div>
-        </div>
-    </body>
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width"/>
+  <script type="text/javascript">
+      window.location.replace("https://blok.ugent.be/");
+  </script>
+</head>
+
+<body>
+<div id="content">
+  <div id="wrapper">
+    Redirecting to <a href="https://blok.ugent.be/">https://blok.ugent.be/</a>
+  </div>
+</div>
+</body>
 </html>
