--- a/scraper/info/info-fietsen.html
+++ b/scraper/info/info-fietsen.html
@@ -1,91 +1,198 @@
 <!-- Based on http://www.studentenmobiliteit.be/student/nl/contact.php
      and http://www.studentenmobiliteit.be/student/nl/locatie.php -->
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-  <meta name="viewport" content="width=device-width" />
-  <link href="webview.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="webview.css" rel="stylesheet" type="text/css"/>
+  <title>Fietsinformatie</title>
 </head>
 
 <body>
-  <h2>Herstelplaatsen</h2>
-  <p>
-    <h3>Centrale verhuurlocatie Kattenberg</h3>
-    Kattenberg 2 (<a href="https://www.google.com/maps/place/Kattenberg+2,+9000+Gent,+België">kaart</a>)<br />
-    Tel: <a href="tel:092691898">09 269 18 98</a><br />
-    E-mail: <a href="mailto:studentenmobiliteit@gent.be">studentenmobiliteit@gent.be</a>
-  </p>
-  <p>
-    <h3>Herstelplaats UGent Blandijnberg</h3>
-    Sint-Hubertusstraat 2 (<a href="https://www.google.com/maps/place/Sint-Hubertusstraat+2,+9000+Gent,+België">kaart</a>)<br />
-    Tel: <a href="tel:092643670">09 264 36 70</a>
-  </p>
-  <p>
-    <h3>Mobiele herstelplaats campus Odisee &amp; KU Leuven (15 oktober tot 5 juni)</h3>
-    KAHO Sint-Lieven, ingang Bargiekaai (<a href="https://www.google.be/maps/place/Bargiekaai,+9000+Gent">kaart</a>)<br />
-    Tel: <a href="tel:0494590322">0494 59 03 22</a>
-  </p>
-  <p>
-    <h3>Mobiele herstelplaats campus Schoonmeersen (15 oktober tot 5 juni)</h3>
-    HoGent, campus Schoonmeersen, Valentin Vaerwyckweg, ondergrondse parking aan P-gebouw (<a href="https://www.google.be/maps/place/Gebouw+P,+9000+Gent">kaart</a>)<br />
-    Tel: <a href="tel:092424257">09 242 42 57</a>
-  </p>
-  <p>
-    <h3>Mobiele herstelplaats campus Artevelde Hogeschool (15 oktober tot 5 juni)</h3>
-    Artevelde Hogeschool, campus Kantienberg, Voetweg 66 (<a href="https://www.google.be/maps/place/Arteveldehogeschool+-+Campus+Kantienberg">kaart</a>)
-  </p>
-  <p>
-    <h3>Mobiele herstelplaats campus Universiteitstraat (15 oktober tot 5 juni)</h3>
-    UGent, Universiteitstraat (<a href="https://www.google.be/maps/place/Universiteitstraat,+9000+Gent">kaart</a>)
-  </p>
-  <p>
-    <h3>Mobiele herstelplaats campus Sint-Lucas (15 oktober tot 5 juni)</h3>
-    LUCA, campus Sint-Lucas, Zwartezustersstraat 34 (<a href="https://www.google.be/maps/place/Sint-Lucas+Beeldende+Kunst">kaart</a>)
-  </p>
-  <p>
-    <h3>Mobiele herstelplaats campus Sterre (15 oktober tot 5 juni)</h3>
-    UGent, campus Sterre, S4 bis, Krijgslaan (<a href="https://www.google.be/maps/place/S4,+Campus+Sterre,+9000+Gent">kaart</a>)
-  </p>
-  <p>
-    <h3>Fietspunt vzw Max Mobiel Gent-Sint-Pieters</h3>
-    Voskenslaan 27 (<a href="https://www.google.be/maps/place/Max+Mobiel+Fietspunt+Gent+Sint-Pieters">kaart</a>)<br />
-    Tel: <a href="tel:092428042">09 242 80 42</a><br />
-    E-mail: <a href="mailto:fietspunt@gent.be">fietspunt@gent.be</a>
-  </p>
-  <p>
-    <h3>Fietspunt vzw Max Mobiel Gent-Dampoort</h3>
-    Oktrooiplein 10, station Gent-Dampoort (<a href="https://www.google.be/maps/place/Max+Mobiel+Fietspunt+Gent+Dampoort">kaart</a>)<br />
-    Tel: <a href="tel:092255459">09 225 54 59</a><br />
-    E-mail: <a href="mailto:fietspunt@gent.be">fietspunt@gent.be</a>
-  </p>
 
-  <h2>Openingsuren centrale verhuurlocatie (Kattenberg)</h2>
+<h2>Vaste locaties</h2>
+
+<p class="warning">
+  Kijk voor de openingsuren ook altijd op de website van de locatie waar je heen wilt,
+  uitzonderlijke sluitingen zijn mogelijk.
+</p>
+
+<div>
+  <h3>Centrale verhuurlocatie Kattenberg</h3>
+  <p>Studenten en personeel kunnen hier terecht om fietsen te huren en voor herstellingen.</p>
+  <p class="address">
+    Kattenberg&nbsp;2 (<a href="https://goo.gl/maps/Z8SKjdAqiSH2">kaart</a>)<br>
+    Tel: <a class="telephone" href="tel:092667700">09 266 77 00</a><br>
+    E-mail: <a href="mailto:info.defietsambassade@stad.gent">info.defietsambassade@stad.gent</a><br>
+    Website: <a class="url" href="https://fietsambassade.gent.be/nl/contact/locaties/kattenberg">https://fietsambassade.gent.be/nl/contact/locaties/kattenberg</a>
+  </p>
+  <h4>Openingsuren</h4>
   <ul>
-    <li>maandag: 9u - 12u en 13u - 16u</li>
-    <li>dinsdag: 12u - 16u</li>
-    <li>woensdag: 8u - 12u</li>
-    <li>donderdag: 10u - 12u en 13u - 18u45</li>
+    <li>maandag: <span class="hours">9 – 12 u.</span> en <span class="hours">13 – 16 u.</span></li>
+    <li>dinsdag: <span class="hours">12 – 16 u.</span></li>
+    <li>woensdag: <span class="hours">8 – 12 u.</span></li>
+    <li>donderdag: <span class="hours">10 – 12 u.</span> en <span class="hours">13 – 18.45 u.</span> (herstelplaats <span class="hours">13 – 16.45 u.</span>)</li>
     <li>vrijdag: gesloten</li>
   </ul>
+  <p>
+    De herstelplaats sluit 15 minuten eerder dan de verhuur (behalve op donderdagnamiddag, dan sluit ze om <span class="hours">16.45 u.</span>).
+  </p>
+</div>
 
-  <h2>Openingsuren herstelplaatsen (Kattenberg)</h2>
-  <ul>
-    <li>maandag: 9u - 11u45 en 13u - 15u45</li>
-    <li>dinsdag: 12u - 15u45</li>
-    <li>woensdag: 8u - 11u45</li>
-    <li>donderdag: 10u - 11u45 en 13u - 16u45</li>
-    <li>vrijdag: gesloten</li>
-  </ul>
+<div>
+  <h3>Herstelplaats UGent (Blandijnberg)</h3>
+  <p>Studenten en personeel kunnen hier terecht voor herstellingen.</p>
+  <p class="address">
+    Sint-Hubertusstraat&nbsp;2 (<a href="https://goo.gl/maps/q8m4kuWhAaQ2">kaart</a>)<br>
+    Tel: <a class="telephone" href="tel:092643670">09 264 36 70</a>
+  </p>
+</div>
 
-  <h2>Openbare fietspompen</h2>
+<div>
+  <h3>Fietsendepot</h3>
+  <p>
+    Hier worden alle gevonden fietsen bewaard (behalve de opgeruimde fietsen van de ondergrondse parking van Gent-Sint-Pieters).
+    Je kan hier ook je fiets laten <a href="https://fietsambassade.gent.be/nl/fiets-kwijt/fietsmarkeren">markeren</a>.
+  </p>
+  <p class="address">
+    Maaltebruggestraat&nbsp;191 (<a href="https://goo.gl/maps/nsFGYfi2nDx">kaart</a>)<br>
+    Tel: <a class="telephone" href="tel:092667700">09 266 77 00</a><br>
+    E-mail: <a href="mailto:info.defietsambassade@stad.gent">info.defietsambassade@stad.gent</a><br>
+    Website: <a class="url" href="https://fietsambassade.gent.be/nl/fiets-kwijt/fietsendepot">https://fietsambassade.gent.be/nl/fiets-kwijt/fietsendepot</a>
+  </p>
+  <h4>Openingsuren</h4>
   <ul>
-    <li>Bibliotheek Zuid, Woodrow Wilsonplein, rechts van de deur aan de
-      fietsenstallingen (<a href="https://www.google.be/maps/place/Woodrow+Wilsonplein,+9000+Gent">kaart</a>)</li>
-    <li>Fietsendepot, Academiestraat 6 (<a href="https://www.google.be/maps/place/Academiestraat+6,+9000+Gent">kaart</a>)</li>
-    <li>StudentENmobiliteit, Kattenberg 2 (<a href="https://www.google.be/maps/place/Kattenberg+2,+9000+Gent">kaart</a>)</li>
-    <li>Max Mobiel, Voskenslaan 27, aan de ingang (<a href="https://www.google.be/maps/place/Max+Mobiel+Fietspunt+Gent+Sint-Pieters">kaart</a>)</li>
-    <li>Max Mobiel, Oktrooiplein 10, station Gent-Dampoort (voor het fietspunt) (<a href="https://www.google.be/maps/place/Max+Mobiel+Fietspunt+Gent+Dampoort">kaart</a>)</li>
+    <li>maandag: <span class="hours">16 – 18 u.</span></li>
+    <li>dinsdag: op afspraak, <span class="hours">10 – 12 u.</span> en <span class="hours">13 – 16. u.</span> (afspraak minstens één dag op voorhand)</li>
+    <li>woensdag: <span class="hours">13 – 16 u.</span></li>
+    <li>donderdag: <span class="hours">16 – 18 u.</span></li>
+    <li>vrijdag: <span class="hours">12 – 15 u.</span></li>
   </ul>
+  <p>Gesloten op feestdagen, tijdens de Gentse Feesten en in de kerstvakantie.</p>
+</div>
+
+<div>
+  <h3>Fietspunt Gent Centrum</h3>
+  <p>
+    Iedereen kan hier terecht voor fietsherstel, banden oppompen, fietsmarkering, fietsverhuur (voor particulieren en groepen), onderhoud huurfietsen, ...<br>
+    Er is ook een beveiligde <a href="https://stad.gent/openingsuren-adressen/beveiligde-fietsenparking-emile-braunplein">fietsenparking</a>.
+  </p>
+  <p class="address">
+    Emile Braunplein (<a href="https://goo.gl/maps/vTrtrhHn4dk">kaart</a>)<br>
+    Tel: <a class="telephone" href="tel:092667700">09 266 77 00</a><br>
+    E-mail: <a href="mailto:info.defietsambassade@stad.gent">info.defietsambassade@stad.gent</a><br>
+    Website: <a class="url" href="https://fietsambassade.gent.be/nl/contact/locaties/fietspunt-gent-centrum">https://fietsambassade.gent.be/nl/contact/locaties/fietspunt-gent-centrum</a>
+  </p>
+  <h4>Openingsuren</h4>
+  <ul>
+    <li>Maandag tot vrijdag: <span class="range">8 – 18 u.</span></li>
+    <li>Weekends en feestdagen (3&nbsp;maart tot 10&nbsp;oktober): <span class="range">10 – 18 u.</span></li>
+  </ul>
+  <p>Gesloten tijdens de Gentse Feesten.</p>
+</div>
+
+<div>
+  <h3>Fietspunt Gent Dampoort</h3>
+  <p>
+    Iedereen kan hier terecht voor fietsherstel, banden oppompen, fietsmarkering, fietsverhuur (voor particulieren en groepen), onderhoud huurfietsen, ...
+  </p>
+  <p class="address">
+    Oktrooiplein&nbsp;10 (<a href="https://goo.gl/maps/vQ4HR6zKjLm">kaart</a>)<br>
+    Tel: <a href="tel:092667700">09 266 77 00</a><br>
+    E-mail: <a href="mailto:info.defietsambassade@stad.gent">info.defietsambassade@stad.gent</a><br>
+    Website: <a class="url" href="https://fietsambassade.gent.be/nl/contact/locaties/fietspunt-gent-dampoort">https://fietsambassade.gent.be/nl/contact/locaties/fietspunt-gent-dampoort</a>
+  </p>
+  <h4>Openingsuren</h4>
+  <ul>
+    <li>Maandag tot vrijdag: <span class="range">7 – 19 u.</span></li>
+    <li>Gesloten tijdens het weekend.</li>
+  </ul>
+  <p class="warning">Kijk zeker op de website, want de openingsuren van dit fietspunt kunnen wijzigen tijdens vakanties en feestdagen.</p>
+</div>
+
+<div>
+  <h3>Fietspunt Gent Sint-Pieters</h3>
+  <p>
+    Iedereen kan hier terecht voor fietsherstel, banden oppompen (24/7), fietsmarkering, fietsverhuur (voor particulieren, groepen en bedrijven), onderhoud huurfietsen, ...
+  </p>
+  <p class="address">
+    Voskenslaan&nbsp;27 (<a href="https://goo.gl/maps/bu51SvYAvBq">kaart</a>)<br>
+    Tel: <a class="telephone" href="tel:092667700">09 266 77 00</a><br>
+    E-mail: <a href="mailto:info.defietsambassade@stad.gent">info.defietsambassade@stad.gent</a><br>
+    Website: <a class="url" href="https://fietsambassade.gent.be/nl/contact/locaties/herstelpunt-gent-sint-pieters">https://fietsambassade.gent.be/nl/contact/locaties/herstelpunt-gent-sint-pieters</a>
+  </p>
+  <h4>Openingsuren</h4>
+  <ul>
+    <li>Maandag tot vrijdag: <span class="range">7 – 19 u.</span></li>
+    <li>Zaterdag (3&nbsp;maart tot 28&nbsp;oktober): <span class="range">10 – 18 u.</span></li>
+    <li>Gesloten op zon- en feestdagen.</li>
+  </ul>
+  <p class="warning">Kijk zeker op de website, want de openingsuren van dit fietspunt kunnen wijzigen tijdens vakanties en feestdagen.</p>
+</div>
+
+<h2>Mobiele herstelbus</h2>
+<p>
+  De mobiele herstelbus gaat wekelijks naar verschillende hogescholen en universiteiten.<br>
+  Website: <a class="url" href="https://fietsambassade.gent.be/nl/herstel-en-onderhoud/mobiele-herstelbus">https://fietsambassade.gent.be/nl/herstel-en-onderhoud/mobiele-herstelbus</a>
+</p>
+<h3>Weekrooster</h3>
+<p>
+  <span class="warning">Kijk zeker op de website voor de bijgewerkte detailplanning.</span><br>
+  Dit rooster vervalt op feestdagen, kerstvakantie, paasvakantie, juni, juli, augustus en september.
+</p>
+
+<h4>Maandag</h4>
+<p><span class="range">9 – 12 u.</span> — UGent Campus Merelbeke (<a href="https://goo.gl/maps/UaaAKnaFCpT2">kaart</a>)</p>
+
+<h4>Dinsdag</h4>
+<p>
+  <span class="range">08.15 – 10.15 u.</span> — K.U.L. / Luca School of Arts (<a href="https://goo.gl/maps/jLcC59fj5dr">kaart</a>)<br>
+  <span class="range">10.30 – 12.30 u.</span> — Technologiecampus Gent Odisee (<a href="https://goo.gl/maps/A2xGqnma7V82">kaart</a>)
+</p>
+
+<h4>Woensdag</h4>
+<p>
+  <span class="range">13.30 – 14.45 u.</span> — wekelijks afwisselend tussen UZ Gent-Campus gebouw B3 (<a href="https://goo.gl/maps/YcQcKgHQ5Hu">kaart</a>) en GUSB (<a href="https://goo.gl/maps/8Vwn39ntPQn">kaart</a>)
+</p>
+
+<h4>Donderdag</h4>
+<p>
+  <span class="range">11 – 16 u.</span> — Hogent Campus Schoonmeersen (<a href="https://goo.gl/maps/1CZkZ5szx5m">kaart</a>)
+</p>
+
+<h2>Openbare fietspompen</h2>
+<ul>
+  <li>
+    Bibliotheek Zuid, Woodrow Wilsonplein, rechts van de deur aan de fietsenstallingen (<a href="https://goo.gl/maps/9oQW3iRN5HS2">kaart</a>)
+  </li>
+  <li>
+    Fietsenparking Korenmarkt (<a href="https://goo.gl/maps/BJa978YwTT72">kaart</a>)
+  </li>
+  <li>
+    Centrale verhuurlocatie Kattenberg (<a href="https://goo.gl/maps/Z8SKjdAqiSH2">kaart</a>)
+  </li>
+  <li>
+    Fietspunt Centrum / parking Emile Braunplein(<a href="https://goo.gl/maps/vTrtrhHn4dk">kaart</a>)
+  </li>
+  <li>
+    Fietspunt Gent Sint-Pieters (<a href="https://goo.gl/maps/bu51SvYAvBq">kaart</a>)
+  </li>
+  <li>
+    Fietspunt Gent Dampoort (<a href="https://goo.gl/maps/vQ4HR6zKjLm">kaart</a>)
+  </li>
+  <li>
+    Fietsendepot (<a href="https://goo.gl/maps/nsFGYfi2nDx">kaart</a>)
+  </li>
+  <li>
+    Fietsenstalling iGent-toren (<a href="https://goo.gl/maps/BZs5gd76HQH2">kaart</a>)
+  </li>
+  <li>
+    Ingang Campus Zwijnaarde (<a href="https://goo.gl/maps/ponVA8W7dqy">kaart</a>)
+  </li>
+  <li>
+    Campus Coupure (<a href="https://goo.gl/maps/jfBizxCtZJF2">kaart</a>)
+  </li>
+</ul>
 </body>
 </html>
