Split Dutch and English content, add English content

--- a/scraper/info/nl/info-fietsen.html
+++ b/scraper/info/nl/info-fietsen.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="webview.css" rel="stylesheet" type="text/css"/>
+  <link href="../webview.css" rel="stylesheet" type="text/css"/>
   <title>Fietsinformatie</title>
 </head>
 
@@ -98,7 +98,7 @@
     Iedereen kan hier terecht voor fietsherstel, banden oppompen, fietsmarkering, fietsverhuur (voor particulieren en groepen), onderhoud huurfietsen, ...
   </p>
   <p class="address">
-    Oktrooiplein&nbsp;10 (<a href="https://goo.gl/maps/vQ4HR6zKjLm">kaart</a>)<br>
+    Oktrooiplein&nbsp;10Z (<a href="https://goo.gl/maps/vQ4HR6zKjLm">kaart</a>)<br>
     Tel: <a href="tel:092667700">09 266 77 00</a><br>
     E-mail: <a href="mailto:info.defietsambassade@stad.gent">info.defietsambassade@stad.gent</a><br>
     Website: <a class="url" href="https://fietsambassade.gent.be/nl/contact/locaties/fietspunt-gent-dampoort">https://fietsambassade.gent.be/nl/contact/locaties/fietspunt-gent-dampoort</a>
@@ -183,9 +183,6 @@
   </li>
   <li>
     Fietsendepot (<a href="https://goo.gl/maps/nsFGYfi2nDx">kaart</a>)
-  </li>
-  <li>
-    Fietsenstalling iGent-toren (<a href="https://goo.gl/maps/BZs5gd76HQH2">kaart</a>)
   </li>
   <li>
     Ingang Campus Zwijnaarde (<a href="https://goo.gl/maps/ponVA8W7dqy">kaart</a>)
