Add Google Site verification

--- a/website/index.html
+++ b/website/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Dienst StudentenActivititeiten" />
 
+    <meta name="google-site-verification" content="IjAljmekXXbiQQh5zCQmyIKkvUsDx2EtJMZSwWO28-s" />
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="css/jquery.smartbanner.css">
