--- a/website/index.html
+++ b/website/index.html
@@ -51,6 +51,9 @@
             Waar je ook bent, vanaf nu heb je met Hydra steeds de UGent in je broekzak.
           </p>
         </div>
+        <div class="snakes-wrapper">
+          <img src="img/snake-headers.png" class="header mx-auto d-block snakes">
+        </div>
       </div>
       <div class="card badge-card">
         <div class="card-body">
@@ -94,16 +97,37 @@
         </div>
       </div>
     </div>
-    <div class="col-12 col-md-5">
-      <div id="screenshot-carousel" class="carousel slide" data-ride="carousel">
+    <div class="col-12 col-md-6">
+      <div id="screenshot-carousel" class="carousel slide mx-auto" data-ride="carousel" data-interval="4000">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="img/iphone-1.png">
+            <img class="d-block w-100" src="img/android-1.png">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/android-2.png">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/android-3.png">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/android-4.png">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/android-5.png">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/android-6.png">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/android-7.png">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/android-8.png">
           </div>
         </div>
       </div>
-      <div class="carousel-wrapper">
-        <img src="img/iphone2-frame.png">
+      <div>
+
       </div>
     </div>
   </div>
