--- a/server/website/index.html
+++ b/server/website/index.html
@@ -52,7 +52,7 @@
           </p>
         </div>
         <div class="snakes-wrapper">
-          <img src="img/snake-headers.png" class="header mx-auto d-block snakes">
+          <img src="img/snake-headers.png" class="header mx-auto d-block snakes" alt="snakes">
         </div>
       </div>
       <div class="card badge-card">
@@ -101,33 +101,30 @@
       <div id="screenshot-carousel" class="carousel slide mx-auto" data-ride="carousel" data-interval="4000">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="img/android-1.png">
+            <img class="d-block w-100" src="img/android-1.png" alt="screenshot1">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-2.png">
+            <img class="d-block w-100" src="img/android-2.png" alt="screenshot2">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-3.png">
+            <img class="d-block w-100" src="img/android-3.png" alt="screenshot3">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-4.png">
+            <img class="d-block w-100" src="img/android-4.png" alt="screenshot4">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-5.png">
+            <img class="d-block w-100" src="img/android-5.png" alt="screenshot5">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-6.png">
+            <img class="d-block w-100" src="img/android-6.png" alt="screenshot6">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-7.png">
+            <img class="d-block w-100" src="img/android-7.png" alt="screenshot7">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-8.png">
+            <img class="d-block w-100" src="img/android-8.png" alt="screenshot8">
           </div>
         </div>
-      </div>
-      <div>
-
       </div>
     </div>
   </div>
