--- a/server/website/index.html
+++ b/server/website/index.html
@@ -42,7 +42,7 @@
       <div class="card content-card">
         <div class="card-body">
           <h1 class="d-none">Hydra</h1>
-          <div class="card-title"><img src="img/hydra-logo.png" class="mx-auto d-block"></div>
+          <div class="card-title"><img src="img/hydra-logo.png" class="mx-auto d-block" alt="hydra-logo"></div>
           <p class="lead font-weight-normal">
             Met Hydra ben je steeds op de hoogte van het laatste nieuws en de activiteiten van jouw favoriete studentenverenigingen.
             Luister naar Urgent.fm, lees Schamper of beslis of het menu van de resto's vandaag bij je in de smaak valt.
