Update information for 2018-2019

--- a/scraper/info/en/info-fietsen.html
+++ b/scraper/info/en/info-fietsen.html
@@ -87,7 +87,7 @@
   <h4>Opening hours</h4>
   <ul>
     <li>Monday through Friday: <span class="range">8am – 6pm</span></li>
-    <li>Week-ends and holidays (March&nbsp;3rd to October&nbsp;10th): <span class="range">10am – 6pm</span></li>
+    <li>Week-ends and holidays (March&nbsp;3rd to October&nbsp;28th): <span class="range">10am – 6pm</span></li>
   </ul>
   <p>Closed during the Ghent Festivities.</p>
 </div>
@@ -112,7 +112,7 @@
 </div>
 
 <div>
-  <h3>Bicycle point Ghent Sint-Pieters</h3>
+  <h3>Repair point Ghent Sint-Pieters</h3>
   <p>
     Everybody can go here for repairs, pumping up tires (24/7), registrations, rental (for individuals, groups and companies), maintenance rentals, ...
   </p>
