--- a/scraper/info/nl/info-fietsen.html
+++ b/scraper/info/nl/info-fietsen.html
@@ -87,7 +87,7 @@
   <h4>Openingsuren</h4>
   <ul>
     <li>Maandag tot vrijdag: <span class="range">8 – 18 u.</span></li>
-    <li>Weekends en feestdagen (3&nbsp;maart tot 10&nbsp;oktober): <span class="range">10 – 18 u.</span></li>
+    <li>Weekends en feestdagen (3&nbsp;maart tot 28&nbsp;oktober): <span class="range">10 – 18 u.</span></li>
   </ul>
   <p>Gesloten tijdens de Gentse Feesten.</p>
 </div>
@@ -112,7 +112,7 @@
 </div>
 
 <div>
-  <h3>Fietspunt Gent Sint-Pieters</h3>
+  <h3>Herstelpunt Gent Sint-Pieters</h3>
   <p>
     Iedereen kan hier terecht voor fietsherstel, banden oppompen (24/7), fietsmarkering, fietsverhuur (voor particulieren, groepen en bedrijven), onderhoud huurfietsen, ...
   </p>
