Add Google Analytics

--- a/website/index.html
+++ b/website/index.html
@@ -7,6 +7,17 @@
   <meta name="google-play-app" content="app-id=be.ugent.zeus.hydra">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Zeus WPI">
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-25444917-14"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-25444917-14');
+  </script>
+
 
   <meta name="google-site-verification" content="IjAljmekXXbiQQh5zCQmyIKkvUsDx2EtJMZSwWO28-s"/>
 
