Fix HTML warnings and fix test script some more

--- a/server/static/website/index.html
+++ b/server/static/website/index.html
@@ -42,7 +42,7 @@
       <div class="card content-card">
         <div class="card-body">
           <h1 class="d-none">Hydra</h1>
-          <div class="card-title"><img src="img/hydra-logo.png" class="mx-auto d-block"></div>
+          <div class="card-title"><img src="img/hydra-logo.png" class="mx-auto d-block" alt="logo"></div>
           <p class="lead font-weight-normal">
             Met Hydra ben je steeds op de hoogte van het laatste nieuws en de activiteiten van jouw favoriete studentenverenigingen.
             Luister naar Urgent.fm, lees Schamper of beslis of het menu van de resto's vandaag bij je in de smaak valt.
@@ -52,7 +52,7 @@
           </p>
         </div>
         <div class="snakes-wrapper">
-          <img src="img/snake-headers.png" class="header mx-auto d-block snakes">
+          <img src="img/snake-headers.png" class="header mx-auto d-block snakes" alt="Beautiful Hydra snakes">
         </div>
       </div>
       <div class="card badge-card">
@@ -101,28 +101,28 @@
       <div id="screenshot-carousel" class="carousel slide mx-auto" data-ride="carousel" data-interval="4000">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="img/android-1.png">
+            <img class="d-block w-100" src="img/android-1.png" alt="screenshot 1">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-2.png">
+            <img class="d-block w-100" src="img/android-2.png" alt="screenshot 2">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-3.png">
+            <img class="d-block w-100" src="img/android-3.png" alt="screenshot 3">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-4.png">
+            <img class="d-block w-100" src="img/android-4.png" alt="screenshot 4">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-5.png">
+            <img class="d-block w-100" src="img/android-5.png" alt="screenshot 5">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-6.png">
+            <img class="d-block w-100" src="img/android-6.png" alt="screenshot 6">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-7.png">
+            <img class="d-block w-100" src="img/android-7.png" alt="screenshot 7">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-8.png">
+            <img class="d-block w-100" src="img/android-8.png" alt="screenshot 8">
           </div>
         </div>
       </div>
