--- a/server/static/info/info-kalender.html
+++ b/server/static/info/info-kalender.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width"/>
-  <script type="text/javascript">
+  <title>Redirecting...</title>
+  <script>
       window.location.replace("https://www.ugent.be/student/nl/studeren/kalender");
   </script>
 </head>
 
 <body>
-<div id="content">
-  <div id="wrapper">
-    Redirecting to <a href="https://www.ugent.be/student/nl/studeren/kalender">https://www.ugent.be/student/nl/studeren/kalender</a>
-  </div>
+<div lang="nl">
+  <p>U wordt omgeleid...</p>
+  <p><a href="https://www.ugent.be/student/nl/studeren/kalender">Klik hier</a> indien dit niet gebeurt.</p>
+</div>
+<hr>
+<div lang="en">
+  <p>You are being redirected...</p>
+  <p><a href="https://www.ugent.be/student/nl/studeren/kalender">Click here</a> if this does not happen.</p>
 </div>
 </body>
 </html>
