--- a/server/static/website/index.html
+++ b/server/static/website/index.html
@@ -7,7 +7,7 @@
   <meta name="google-play-app" content="app-id=be.ugent.zeus.hydra">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Zeus WPI">
-  
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-25444917-14"></script>
   <script>
@@ -80,31 +80,38 @@
         <div class="card-body">
           <div class="row clearfix">
             <div class="col-12 col-md-6">
-              <h4>Minerva</h4>
-              <p>Heb uw lessenagenda altijd bij de hand, en mis nooit meer een aankondiging!</p>
               <h4>Activiteiten</h4>
               <p>Niets te doen vanavond? Op onze kalender vind je vast wel iets naar je goesting. Ook weet je dankzij Facebook direct op welke activiteiten je vrienden aanwezig zullen zijn.</p>
               <h4>Nieuws</h4>
               <p>Weet wat er gebeurt in en om de UGent en jouw studentenvereniging.</p>
               <h4>Info</h4>
               <p>Niet zeker op welke dagen de universiteit gesloten is of waar je je fiets kan herstellen? Hier vind je het antwoord op al je vragen.</p>
+              <h4>Urgent.fm</h4>
+              <p>Live-streaming radio van Urgent.fm: je favoriete radio altijd bij de hand.</p>
             </div>
             <div class="col-12 col-md-6">
               <h4>Student Kick-Off</h4>
               <p>Weet waar en wanneer de bands optreden, vind meer informatie over uw favoriete standje in de Student Village!</p>
-              <h4>Resto menu</h4>
+              <h4>Restomenu</h4>
               <p>Verdwaald in Gent en plots wat hongerig? Dankzij de kaart weet je altijd waar de dichtstbijzijnde resto is en wat er op het menu staat.</p>
-              <h4>Schamper Daily</h4>
+              <h4>Schamper</h4>
               <p>Blijf op de hoogte van het laatste nieuws met het officiële en onafhankelijke studentenblad van de Universiteit Gent.</p>
-              <h4>Urgent.fm</h4>
-              <p>Live-streaming radio van Urgent.fm: je favoriete radio altijd bij de hand.</p>
             </div>
           </div>
           <h4>Open-source</h4>
-          <p>Hydra werd ontwikkeld door Zeus WPI, de werkgroep informatica van de UGent. Wij geloven in open-source en maken deze app dan ook publiek op
+          <p>Hydra wordt ontwikkeld door Zeus WPI, de werkgroep informatica van de UGent. Wij geloven in open-source en maken deze app dan ook publiek op
             <a href="https://github.com/ZeusWPI/Hydra">GitHub</a>. Bijdrages zijn meer dan welkom!</p>
           <h4>Social media</h4>
-          <p>Volg ons op <a href="https://facebook.com/hydra.ugent">Facebook</a></p>
+          <p>Volg ons op <a href="https://facebook.com/hydra.ugent">Facebook</a>.</p>
+          <br>
+          <div class="row partner-row">
+            <div class="col-6 col-md-6">
+              <img class="partner-logo mx-auto d-block" src="img/ugent.svg" alt="logo ugent">
+            </div>
+            <div class="col-6 col-md-6">
+              <img class="partner-logo mx-auto d-block" src="https://zinc.zeus.gent/white" alt="logo zeus">
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -119,9 +126,6 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="img/android-3.png" alt="screenshot 3">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/android-4.png" alt="screenshot 4">
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="img/android-5.png" alt="screenshot 5">
@@ -148,8 +152,8 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12 col-md-5 offset-md-1 align-middle">
-        &copy; <a href="http://zeus.ugent.be">Zeus WPI</a> en
-          <a href="http://student.ugent.be">Dienst StudentenActiviteiten</a> 2018
+        Door <a href="http://zeus.ugent.be">Zeus WPI</a> en
+          <a href="http://student.ugent.be">Dienst StudentenActiviteiten</a>.
       </div>
       <div class="col-12 col-md-5 text-right align-middle">
         Foto &copy; <a href="https://www.facebook.com/Baselphoto">Basel Photography</a>
