Add first draft of a new privacy policy

--- a/server/static/website/help/minerva.html
+++ b/server/static/website/help/minerva.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Minerva-integratie - Hydra</title>
-    <link rel="stylesheet" href="../css/help.css">
+    <link rel="stylesheet" href="../css/text.css">
 </head>
 <body>
 
